--- a/presentation.tex
+++ b/presentation.tex
@@ -82,6 +82,8 @@ Nikolsky--equation
 	\frametitle{The problem with potentiometric SECM} 
 	\framesubtitle{Distortion at high scan rate}
 	\centering
+\quad\quad\quad\quad\quad\quad Slow \hfill Fast \quad\quad\quad\quad\quad\quad\quad
+
 	\includegraphics[trim = 10mm 30mm 0mm 20mm, clip, width=0.4\textwidth, angle=-90]{real.eps}\hfill\includegraphics[trim = 10mm 30mm 0mm 20mm, clip, width=0.4\textwidth, angle=-90]{fastcomb_sim.eps}
 \end{frame}
 
