--- a/presentation.tex
+++ b/presentation.tex
@@ -222,6 +222,8 @@ Optimizing scanning patterns and algorithms.
 	\frametitle{Simulated SECM scans}	
 	\framesubtitle{Using the Cartesian and the polar coordinate system based algorithms}
 	\centering
+	\quad\quad\quad\quad\quad\quad Cartesian \hfill polar \quad\quad\quad\quad\quad\quad\quad\quad
+
 	\includegraphics[width=0.3\textwidth, angle=-90]{meander_sim.eps}\includegraphics[width=0.3\textwidth, angle=-90]{arc_sim.eps}
 	\vfill
 \end{frame}
@@ -270,6 +272,9 @@ Optimizing scanning patterns and algorithms.
 	\centering
 	\frametitle{Confirmation with experimental SECM scans}
 	\framesubtitle{Recorded using the antimony microelectrode}
+	\quad\quad\quad\quad\quad 440 seconds \hfill 340 seconds \quad\quad\quad\quad\quad\quad
+
+
 	\includegraphics[width=0.3\textwidth, angle=-90]{meander.eps}\includegraphics[width=0.3\textwidth, angle=-90]{arc.eps}\\
 	\vfill
 	Scans are completed almost 2 times faster,\\ images have almost 10 times less distortion.
