first full version

--- a/presentation.tex
+++ b/presentation.tex
@@ -418,48 +418,38 @@ The effect of electric field on potentiometric SECM imaging.
 \end{frame}
 
 \begin{frame}
-\frametitle{Conclusions}
+\frametitle{Thesis 1--4}
+\scriptsize
 \begin{enumerate}
-\item I've successfully shortened the response time of the potentiometric cell by using low resistance, solid-contact microelectrodes.
+\item \textbf{I've successfully shortened the response time of the potentiometric cell by using low resistance, solid-contact microelectrodes.}
 I've compared them to conventional, liquid contact microelectrodes by basic characterization and model system study to prove the improved performance.
 
-\item Taking adventage of the new solid-contact electrodes, I've studied the galvanic corrosion of magnesium and the AZ63 magnesium alloy by mapping the concentration of dissolving ions.
+\item \textbf{Taking adventage of the new solid-contact electrodes, I've studied the galvanic corrosion of magnesium} and the AZ63 magnesium alloy by mapping the concentration of dissolving ions.
 I used the new solid contact ion selective microelectrodes as SECM probes. This allowed faster scan rates.
-\end{enumerate}
-\end{frame}
 
-\begin{frame}
-\frametitle{Conclusions}
-\begin{enumerate}
-\setcounter{enumi}{2}
-\item I've estimated the corrosion current based on the SECM measurements, and compared the result with that obtained with another, established method; the indirect measurement of corrosion current.
+\item \textbf{I've estimated the corrosion current based on the SECM measurements, and compared the result with that obtained with another, established method}; the indirect measurement of corrosion current.
 After applying Faraday's Law of Electrolysis, the two results could be compared.
-They were very similar, suggesting the applicability of SECM in obtaining quantitative results.
+\textbf{They were very similar}, suggesting the applicability of SECM in obtaining quantitative results.
 
-\item I've designed new scanning patterns and algorithms, optimized to radially symmetric targets.
+\item \textbf{I've designed new scanning patterns and algorithms, optimized to radially symmetric targets.}
 I've proven that with these new patterns and algorithms, image distortion is lower compared to the conventional ones, by numerical simulations and experimental SECM scans.
 \end{enumerate}
 \end{frame}
 
 \begin{frame}
-\frametitle{Conclusions}
+\frametitle{Thesis 5--8}
+\scriptsize
 \begin{enumerate}
 \setcounter{enumi}{4}
-\item I've shown that by using deconvolution, distortion can be significantly lowered in the potentiometric SECM images.
+\item \textbf{I've shown that by using deconvolution, distortion can be significantly lowered in the potentiometric SECM images.}
 To prove the validity of the technique, I've compared deconvoluted images to equilibrium images scanned at a rate which allowed to record equilibrium potentials.
 
-\item I've used deconvolution to restore potentiometric SECM images about a corroding carbon steel sample.
+\item \textbf{I've used deconvolution to restore potentiometric SECM images about a corroding carbon steel sample.}
 Evaluation of this data was possible, because scanning time \emph{and} distortion was reduced at the same time.
 
-\item I've shown the applicability of blind deconvolution.
+\item \textbf{I've shown the applicability of blind deconvolution.}
 This method can be used on measurements where the convolution function cannot be determined.
-\end{enumerate}
-\end{frame}
 
-\begin{frame}
-\frametitle{Conclusions}
-\begin{enumerate}
-\setcounter{enumi}{7}
 \item I've proven that the electric field present in many studied systems -- galvanically corroding ones in particular -- affects the measured potential.
 The electric field has a direct influence on the measured potential, which is then a sum of this contribution and the Nernstian response associated with ion activity.
 This effect can cause serious errors in interpretations in the measurements.
@@ -468,13 +458,75 @@ By taking this effect into account, a more accurate conclusion can be drawn.
 \end{enumerate}
 \end{frame}
 
+
 \begin{frame}
-	\frametitle{Acknowledgements}
+\frametitle{List of publications}
+\framesubtitle{Related to the dissertation}
+\tiny
+\begin{enumerate}
+\item Ricardo M. Souto, \textbf{András Kiss}, Javier Izquierdo, Lívia Nagy, István Bitter, Géza Nagy, Spatially-resolved imaging of concentration distributions on corroding mag\-ne\-si\-um-based materials exposed to aqueous environments by SECM, \emph{Electrochemistry Communications 26 (2013): 25-28.}, IF.: 4.85, cited by: 31
+
+\item \textbf{András Kiss}, Ricardo M. Souto, Géza Nagy, Investigation of Mg/Al alloy sacrificial anode corrosion with Scanning Electrochemical Microscopy, \emph{Periodica Polytechnica Chemical Engineering 57, no. 1-2 (2013): 11-14.}, IF.: 0.30, cited by: 5
+
+\item Javier Izquierdo, \textbf{András Kiss}, Juan José Santana, Lívia Nagy, István Bitter, Hugh S. Isaacs, Géza Nagy, Ricardo M. Souto, Development of Mg$^{2+}$ ion-selective microelectrodes for potentiometric scanning electrochemical microscopy monitoring of galvanic corrosion processes, \emph{Journal of The Electrochemical Society 160, no. 9 (2013): C451-C459.}, IF.: 3.27, cited by: 23
+
+\item \textbf{András Kiss}, Géza Nagy, New SECM scanning algorithms for improved potentiometric imaging of circularly symmetric targets, \emph{Electrochimica Acta 119 (2014): 169-174.}, IF.: 4.50, cited by: 8
+
+\item \textbf{András Kiss}, Géza Nagy, Deconvolution of potentiometric SECM images recorded with high scan rate, \emph{Electrochimica Acta 163 (2015): 303-309.}, IF.: 4.50, cited by: 7
+
+\item \textbf{András Kiss}, Géza Nagy, Deconvolution in potentiometric SECM, \emph{Electroanalysis 27, no. 3 (2015): 587-590.}, IF.: 2.14, cited by: 2
+
+\item \textbf{András Kiss}, Dániel Filotás, Ricardo M Souto, Géza Nagy, The effect of electric field on potentiometric Scanning Electrochemical Microscopic imaging, \emph{Electrochemistry Communications 77 (2017): 138-141.}, IF.: 4.569
+\end{enumerate}
 \end{frame}
 
 \begin{frame}
-	\frametitle{List of publication}
+\frametitle{List of publications}
+\framesubtitle{Unrelated to the dissertation}
+\tiny
+\begin{enumerate}
+\item \textbf{András Kiss}, László Kiss, Barna Kovács, Géza Nagy, Air Gap Microcell for Scanning Electrochemical Microscopic Imaging of Carbon Dioxide Output. Model Calculation and Gas Phase SECM Measurements for Estimation of Carbon Dioxide Producing Activity of Microbial Sources, \emph{Electroanalysis 23, no. 10 (2011): 2320-2326.}, IF.: 2.14, cited by: 3
+
+\item Ricardo M. Souto, Javier Izquierdo, Juan José Santana, \textbf{András Kiss}, Lívia Nagy, Géza Nagy. Progress in scanning electrochemical microscopy by coupling potentiometric and amperometric measurement modes, \emph{Current Microscopy Contributions to Advances in Science and Technology, Formatex Research Center, Badajoz (2012): 1407-1415}, cited by: 3
+
+\item Lívia Nagy, Gergely Gyetvai, \textbf{András Kiss}, Ricardo Souto, Javier Izquierdo, Géza Nagy, Speciális célra szolgáló mikroelektródok kifejlesztése és alkalmazása, \emph{Magyar Kémiai Folyóirat 119, 2-3. (2013): 104-109.}
+
+\item Zsuzsanna \H{O}ri, \textbf{András Kiss}, Anton Alexandru Ciucu, Constantin Mihailciuc, Cristian Dragos Stefanescu, Lívia Nagy, Géza Nagy, Sensitivity enhancement of a ,,bananatrode'' biosensor for dopamine based on SECM studies inside its reaction layer, \emph{Sensors and Actuators B: Chemical 190 (2014): 149-156.}, IF.: 4.10, cited by: 4
+
+\item Javier Izquierdo, Bibiana M Fernández-Pérez, Dániel Filotás, Zsuzsanna Őri, \textbf{András Kiss}, Romen T Martín-Gómez, Lívia Nagy, Géza Nagy, Ricardo M Souto, Imaging of Concentration Distributions and Hydrogen Evolution on Corroding Magnesium Exposed to Aqueous Environments Using Scanning Electrochemical Microscopy, \emph{Electroanalysis 28, (2016): 2354-2366.}, IF.: 2.471, cited by: 2
+
+\item A. El Jaouhari,  Dániel Filotás, \textbf{András Kiss}, M. Laabd, E. A. Bazzaoui, Lívia Nagy, Géza Nagy, A. Albourine, J. I. Martins, R. Wang, SECM investigation of electrochemically synthesized polypyrrole from aqueous medium, \emph{Journal of Applied Electrochemistry 46 (2016): 1199-1209.}, IF.: 2.223
+\end{enumerate}
 \end{frame}
+
+
+\begin{frame}
+\frametitle{Acknowledgements}
+\scriptsize
+I wish to express my sincere gratitude to \textbf{professor Géza Nagy} for introducing me to the fascinating field of electrochemistry, and for the continuous support and guidance during the work.
+
+\vspace{5mm}
+
+I am truly grateful to \textbf{Barna Kovács} for the enlighting discussions about microelectrode electronics. and to \textbf{Lívia Nagy} for the help received during the years of my PhD studies. I am also thankful to \textbf{Sándor Kunsági-Máté} for the support.
+
+\vspace{5mm}
+
+Many thanks are due to all my colleagues and friends with whom I have worked during my years as an undergraduate and doctoral student.
+
+\vspace{5mm}
+
+I am thankful to Professor Johan Bobacka, Ricardo M. Souto, Frank-Michael Matysik, Petr Skládal and Mohammed Bazzaoui for welcoming me in their laboratories.
+
+\vspace{5mm}
+
+I am also thankful to all the anonymous referees who gave meaningful feedback about my work as part of the peer review process.
+\end{frame}
+
+\begin{frame}
+\centering
+Thank you for your attention.
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{}
