first full version

--- a/presentation.tex
+++ b/presentation.tex
@@ -485,6 +485,7 @@ By taking this effect into account, a more accurate conclusion can be drawn.
 \framesubtitle{Unrelated to the dissertation}
 \tiny
 \begin{enumerate}
+\setcounter{enumi}{7}
 \item \textbf{András Kiss}, László Kiss, Barna Kovács, Géza Nagy, Air Gap Microcell for Scanning Electrochemical Microscopic Imaging of Carbon Dioxide Output. Model Calculation and Gas Phase SECM Measurements for Estimation of Carbon Dioxide Producing Activity of Microbial Sources, \emph{Electroanalysis 23, no. 10 (2011): 2320-2326.}, IF.: 2.14, cited by: 3
 
 \item Ricardo M. Souto, Javier Izquierdo, Juan José Santana, \textbf{András Kiss}, Lívia Nagy, Géza Nagy. Progress in scanning electrochemical microscopy by coupling potentiometric and amperometric measurement modes, \emph{Current Microscopy Contributions to Advances in Science and Technology, Formatex Research Center, Badajoz (2012): 1407-1415}, cited by: 3
