--- a/presentation.tex
+++ b/presentation.tex
@@ -260,17 +260,15 @@ Optimizing scanning patterns and algorithms.
 \end{table}
 \end{frame}
 
-\begin{frame}
-\frametitle{Confirmation with experimental SECM scans}
-\framesubtitle{Antimony microelectrode as pH sensor}
-\centering
-\begin{equation*}
-    \ce{2Sb + 3H_2O <=> Sb_2O_3 + 6H^+ + 6e^-}
-\end{equation*}
-\includegraphics[width=0.7\textwidth]{antimony.eps}
-
-%\includegraphics[width=0.4\textwidth]{sb.jpg}
-\end{frame} 
+%\begin{frame}
+%\frametitle{Confirmation with experimental SECM scans}
+%\framesubtitle{Antimony microelectrode as pH sensor}
+%\centering
+%\begin{equation*}
+%    \ce{2Sb + 3H_2O <=> Sb_2O_3 + 6H^+ + 6e^-}
+%\end{equation*}
+%\includegraphics[width=0.7\textwidth]{antimony.eps}
+%\end{frame} 
 
 
 \begin{frame}
